# github-versus

./: .editorconfig  pyproject.toml
ghvs/: main.py
ghvs/models/domain/: repositories.py
ghvs/table/: compare.py
tests/: test_github_versus.py
